fix: fix type errors

--- a/content/front-end/01_intro.mdx
+++ b/content/front-end/01_intro.mdx
@@ -12,3 +12,10 @@ keywords:
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod, nisl eu ultricies cursus, nunc elit ultricies nunc, vitae ultricies nisl elit eget nunc. Donec euismod, nisl eu ultricies cursus, nunc elit ultricies nunc, vitae ultricies nisl elit eget nunc. Donec euismod, nisl eu ultricies cursus, nunc elit ultricies nunc, vitae ultricies nisl elit eget nunc. Donec euismod, nisl eu ultricies cursus, nunc elit ultricies nunc, vitae ultricies nisl elit eget nunc.
 Istu euismod, nisl eu ultricies cursus, nunc elit ultricies nunc, vitae ultricies nisl elit eget nunc. Donec euismod, nisl eu ultricies cursus, nunc elit ultricies nunc, vitae ultricies nisl elit eget nunc.
 Donec euismod, nisl eu ultricies cursus, nunc elit ultricies nunc, vitae ultricies nisl elit eget nunc. Donec euismod, nisl eu ultricies cursus, nunc elit ultricies nunc, vitae ultricies nisl elit eget nunc.
+
+<GroupCard>
+  <Card title="tomato" />
+  <Card title="orange" />
+  <Card title="cheese" />
+  <Card title="lettuce" />
+</GroupCard>
